# WindOMaticX

./: .gitignore  CMakeLists.txt  ReadMe.md  main.c
